# django-streams

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.benchmarks/Darwin-CPython-3.11-64bit/: 0001_7a4fc3552257174d5bd74734285c415ac5b8027e_20241209_102313_uncommited-changes.json
.benchmarks/Linux-CPython-3.11-64bit/: 0001_f30f82eaec7f22eb6ea9632bab8703b28c133ea5_20250107_130110.json  0002_4a8360e128e7c9000f6e74ee02a1beefe80b54c1_20250107_130150.json
.benchmarks/Linux-CPython-3.9-64bit/: 0001_71c31af89e850f4704c867bbc745a34c46e1a692_20241210_095141.json  (+4 more)
.github/workflows/: bench-release.yml  (+5 more)
diagrams/: django_worker.plantuml
docs/: index.md  kubernetes_deployment.md  producer.md  test_client.md  using_orm.md  worker.md
examples/django_streaming_example/: Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
examples/django_streaming_example/django_streaming_example/: asgi.py  settings.py  urls.py  wsgi.py
examples/django_streaming_example/django_streaming_example/streaming/: apps.py  engine.py  middleware.py  models.py  serializer.py  streams.py  urls.py  utils.py  views.py
examples/django_streaming_example/django_streaming_example/streaming/migrations/: 0001_initial.py
examples/django_streaming_example/tests/: conftest.py  test_streams.py  test_views.py
kubernetes_deployment/: index.html
producer/: index.html
scripts/: benchmark  compare-benchmark  format  install  test
tests/: conftest.py  test_benchmarks.py  test_engine.py  test_worker.py
using_orm/: index.html
worker/: index.html
(+9 files in other folders)
