[tool.poetry]
name = "django_streaming_example"
version = "0.1.0"
description = ""
authors = ["Marcos Schroh <marcos.schroh@kpn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-streams = { path = "../../.", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
